# Harvey_2.0

./: MANIFEST.in  README.md  agent.py  harvey_report.txt  install.sh  main.py  pyproject.toml  requirements.txt  setup.py  sprompt.yaml  tools.py  tschema.json  utils.py
harvey/: __init__.py  agent.py  cli.py  config.py
harvey/data/: tschema.json
report/: david_prudome_report.txt
reports/: Amisha_Lakhani_data_20251118_233301.csv  Amisha_Lakhani_report_20251118_233301.txt  Ariel_Mbingui_data_20251118_233445.csv  Ariel_Mbingui_report_20251118_233445.txt
