[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harvey-osint"
version = "0.1.0"
description = "Harvey - Autonomous OSINT Reconnaissance Agent for LinkedIn and GitHub profiling"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Amisha Lakhani & Ariel Mbingui"}
]
keywords = ["osint", "reconnaissance", "linkedin", "github", "intelligence", "profiling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
    "pandas>=1.5.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.990",
    "twine>=4.0.0",
    "build>=0.10.0",
]

[project.urls]
Repository = "https://github.com/AmuuLakh/Harvey_2.0"

[project.scripts]
harvey = "harvey.cli:main"
harvey-config = "harvey.config:configure_token_cli"

[tool.setuptools]
packages = ["harvey"]

[tool.setuptools.package-data]
harvey = ["data/*.json", "data/*.yaml"]